Refactor message handling in Telegram bot for TikTok downloads with improved error responses